calc starting balance logic
