# src/records/controllers/recordController.ts
@@ -2,12 +2,12 @@ import { RequestHandler } from 'express';
 import httpStatus from 'http-status-codes';
 import { inject, injectable } from 'tsyringe';
 import {
-  IRecord, IRecordInputDTO, MonthlyReportQueryParams, MonthlyReportResponse,
+  IRecord, IRecordDTO, MonthlyReportQueryParams, MonthlyReportResponse,
   PropertyBalanceResponse, RecordFilterParams, RecordPathParams
 } from '../interfaces';
 import { RecordService } from '../services/recordService';
 
-type CreateResourceHandler = RequestHandler<undefined, IRecord, IRecordInputDTO>;
+type CreateRecordHandler = RequestHandler<undefined, IRecordDTO, IRecord>;
 type SearchRecordsHandler = RequestHandler<RecordPathParams, IRecord[], undefined, RecordFilterParams>;
 type GetPropertyBalanceHandler = RequestHandler<RecordPathParams, PropertyBalanceResponse, undefined>;
 type GetMonthlyReportHandler = RequestHandler<RecordPathParams, MonthlyReportResponse, undefined, MonthlyReportQueryParams>;
@@ -27,8 +27,8 @@ export class RecordController {
     }
   };
 
-  public createRecord: CreateResourceHandler = async (req, res, next) => {
-    const recordInput: IRecordInputDTO = req.body
+  public createRecord: CreateRecordHandler = async (req, res, next) => {
+    const recordInput: IRecordDTO = req.body
     try {
       const record = await this.recordService.createRecord(recordInput);
       return res.status(httpStatus.CREATED).json(record);
@@ -49,10 +49,10 @@ export class RecordController {
 
   public getMonthlyReport: GetMonthlyReportHandler = async (req, res, next) => {
     const propertyId: string = req.params.propertyId;
-    const { month, startingBalance } = req.query;
+    const { year, month } = req.query;
 
     try {
-      const report: string[] = await this.recordService.getMonthlyReport(propertyId, month, Number(startingBalance));
+      const report: string[] = await this.recordService.getMonthlyReport(propertyId, year, month);
       return res.status(httpStatus.OK).json({ propertyId, month, report });
     } catch (error) {
       return next(error);
